tests/corpus/snapshots/_cargo_toml/wasm_bindgen__json.snap
---
source: src/snapshot_tests.rs
expression: toml
---
[package]
name = "cddl-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor_event = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
schemars = "1.2.1"
wasm-bindgen = "0.2"
